--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,8 +12,8 @@ const quickLinks = [
 ];
 
 const legalLinks = [
-  { href: "/terms", label: "Terms and conditions" },
-  { href: "/privacy", label: "Privacy policy" },
+  // { href: "/terms", label: "Terms and conditions" },
+  { href: "/privacy-policy", label: "Privacy policy" },
 ];
 ---
 
