--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -744,7 +744,7 @@ quickly hire skilled developers, enabling rapid development of our enterprise ca
       Hire with Your Team in Asia
     </h2>
 
-    <p class="cta-sub mt-3 max-w-2xl mx-auto">
+    <p class="cta-sub mt-[8px] max-w-2xl mx-auto">
       At Your Team in Asia, we don’t just fill roles, we help businesses build
       sustainable offshore teams that deliver lasting results. Take the first step
       towards smarter, leaner growth today!
