Team Members added

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -341,10 +341,10 @@ const {
       <!-- Header -->
       <header class="text-center mb-[64px]">
         <h2 class="ldr-title text-3xl sm:text-4xl font-semibold">
-          Our <span class="accent">founder</span>
+          Our <span class="accent">Founder</span>
         </h2>
         <p class="ldr-sub mt-[8px] text-base text-[#111827]/75">
-          Don't just take our word for it, see what our clients have to say about the results we deliver.</p>
+          Meet our founder, the visionary behind YTA’s journey and success</p>
       </header>
 
       <!-- Quote + Image -->
@@ -369,10 +369,10 @@ const {
          <!-- Header -->
       <header class="text-center mb-[64px]">
         <h2 class="ldr-title text-3xl sm:text-4xl font-semibold">
-          Our leadership <span class="accent">team</span>
+          Our leadership <span class="accent">Team</span>
         </h2>
         <p class="ldr-sub mt-2 text-base text-[#111827]/75">
-          Don't just take our word for it, see what our clients have to say about the results we deliver.</p>
+          Meet our leadership team driving our growth and excellence and delivering lasting impact</p>
       </header>
       <div class="team-leaders grid grid-cols-1 md:grid-cols-3 gap-12">
         <div class="relative card-teams">
