--- a/src/components/RegionWidget.astro
+++ b/src/components/RegionWidget.astro
@@ -118,7 +118,7 @@ const REGIONS = [
       border-radius: 0.5rem;
       overflow: hidden;
       height: 350px;
-      @include mobile {
+      @media only screen and (min-device-width: 320px) and (max-device-width: 767px) {
         margin-bottom: 64px;
       }
 
