image fixed and drawer fixed in mobile

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -750,8 +750,8 @@ quickly hire skilled developers, enabling rapid development of our enterprise ca
       towards smarter, leaner growth today!
     </p>
       <ContactDrawer client:load />
-    <div class="py-16 h-[360px] block lg:hidden xl:hidden">
-       <img src={TeamA.src} alt="Team A" class="absolute bottom-[-23px] left-0 w-full h-auto" />
+    <div class="py-16 h-[250px] lg:h-[360px] block lg:hidden xl:hidden">
+       <img src={TeamA.src} alt="Team A" class="absolute w-auto h-auto top-1/2 left-1/2 -translate-x-1/2 -translate-y-0" />
     </div>
     <!-- <a href={ctaHref} class="cta-btn mt-6 inline-flex items-center justify-center">
       {ctaText}<svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none">
