--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -525,7 +525,7 @@ const {
 
       <ContactDrawer client:load />
       <div class="py-16 h-[360px] block lg:hidden xl:hidden">
-       <img src={TeamA.src} alt="Team A" class="absolute bottom-[-23px] left-0 w-full h-auto" />
+       <img src={TeamA.src} alt="Team A" class="absolute w-auto h-auto top-1/2 left-1/2 -translate-x-1/2 -translate-y-0" />
     </div>
     </div>
   </section>
