--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -524,8 +524,8 @@ const {
       </p>
 
       <ContactDrawer client:load />
-      <div class="py-16 h-[360px] block lg:hidden xl:hidden">
-       <img src={TeamA.src} alt="Team A" class="absolute w-auto h-auto top-1/2 left-1/2 -translate-x-1/2 -translate-y-0" />
+      <div class="py-16 h-[250px] lg:h-[360px] block lg:hidden xl:hidden">
+       <img src={TeamA.src} alt="Team A" class="absolute w-auto h-auto top-1/2 left-1/2 -translate-x-1/2 -translate-y-[-24px]" />
     </div>
     </div>
   </section>
