--- a/src/components/RegionWidget.astro
+++ b/src/components/RegionWidget.astro
@@ -82,9 +82,9 @@ const REGIONS = [
       letter-spacing: -0.2px;
   
 
-      &:hover {
-        background: #f5f7ff;
-      }
+      // &:hover {
+      //   background: #f5f7ff;
+      // }
 
       &.active {
         background: #eef2ff;
