--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -358,7 +358,7 @@ const {
           <img
             src={imgUrl}
             alt={name}
-            class="ldr-img w-full h-80 object-cover rounded-xl"
+            class="ldr-img w-full h-100 object-cover rounded-xl"
           />
         </figure>
       </div>
@@ -510,8 +510,8 @@ const {
       aria-hidden="true"
     >
     </div>
-    <img src={TeamA.src} alt="Team A" class="absolute hidden sm:block lg:block bottom-0 left-25" />
-    <img src={TeamB.src} alt="Team B" class="absolute hidden sm:block lg:block bottom-0 right-25" />
+    <img src={TeamA.src} alt="Team A" class="absolute hidden sm:block md:hidden lg:hidden xl:block bottom-0 left-25" />
+    <img src={TeamB.src} alt="Team B" class="absolute hidden sm:block md:hidden lg:hidden xl:block bottom-0 right-25" />
     <div
       class="relative mx-auto max-w-5xl px-4 sm:px-6 lg:px-8 py-12 text-center"
     >
@@ -524,7 +524,7 @@ const {
       </p>
 
       <ContactDrawer client:load />
-      <div class="py-16 h-[250px] lg:h-[360px] block lg:hidden xl:hidden">
+      <div class="py-16 h-[250px] lg:h-[360px] block md:hidden lg:hidden xl:hidden">
        <img src={TeamA.src} alt="Team A" class="absolute w-auto h-auto top-1/2 left-1/2 -translate-x-1/2 -translate-y-[-24px]" />
     </div>
     </div>
