--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -71,7 +71,7 @@ $card-border: rgba(17,24,39,.12);
     background-color:#FAFBFA ;
     background-size: cover;
     background-position: center;
-    background-image: url('../assets/white-dashed.svg');
+    background-image: url('../assets/background-k2.svg');
     @include mobile{
       background-size: contain;
       background-repeat: inherit;
